# jester

./: Cargo.toml  DEVELOPMENT_NOTES.md  README.md
certs/: dev.crt  dev.key
config/: dev-config.toml
crates/jester-cli/: Cargo.toml
crates/jester-cli/src/: main.rs
crates/jester-core/: Cargo.toml
crates/jester-core/src/: config.rs  lib.rs  plugin.rs  proxy.rs  router.rs
crates/jester-plugin-sdk/: Cargo.toml
crates/jester-plugin-sdk/src/: lib.rs  manifest.rs
crates/jester-plugin-sdk/wit/: http.wit
design/: master-design.md  notes-1.md  notes-2.md  v0.0.1-plan.md
examples/config/: README.md  minimal.jester.toml
plugins/examples/: README.md
