[workspace]
members = [
    "crates/jester-core",
    "crates/jester-cli",
    "crates/jester-plugin-sdk",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
http = "1.3.1"
http-body-util = "0.1"
hyper = { version = "1.8.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1", "server", "tokio"] }
metrics = "0.24.2"
regex = "1"
rustls = "0.21"
rustls-pemfile = "1.0"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-rustls = "0.24"
toml = "0.9.8"
tower = { version = "0.5.2", features = ["util", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
