[package]
name = "jester-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
jester-core = { path = "../jester-core" }
jester-plugin-sdk = { path = "../jester-plugin-sdk" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
metrics-exporter-log = "0.4.0"
