[package]
name = "jester-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
metrics.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
tower.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true
